# krembot_sim_fork

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  README.txt  TODO.md  install.sh  known_issues.md  multi_controllers.md
argos3/: setup_env.sh
argos3-examples/: CMakeLists.txt
argos3-examples/controllers/: CMakeLists.txt
argos3-examples/controllers/footbot_diffusion/: CMakeLists.txt  battery.cpp  battery.h  cbumpers.cpp  cbumpers.h  footbot_diffusion.cpp  footbot_diffusion.h  imu_sensor.cpp  imu_sensor.h  krembot.h  krembot_main.h  mobile_base.cpp  mobile_base.h  rgb_led.cpp  rgb_led.h  rgba_sensor.cpp  rgba_sensor.h
argos3-examples/experiments/: diffusion_1.argos  flocking.argos  krembot.argos
argos3-user/: CMakeLists.txt  LICENSE  README.txt
argos3-user/config/: README.txt  locusts-krembot.argos  mixed_controllers.argos  porting_example.argos  program_template.argos  run_away_by_bumpers.argos  run_away_by_bumpers_multiple.argos  simple_demo.argos  template_program.argos
argos3-user/controllers/: CMakeLists.txt  README.txt
argos3-user/controllers/porting_example/: CMakeLists.txt  krembot.ino.cpp
argos3-user/controllers/porting_example/my_code/: MyCode.cpp
argos3-user/controllers/program_template/: CMakeLists.txt  controller.cpp  krembot.ino.cpp  krembot_main.cpp  krembot_main.h
argos3-user/controllers/run_away_by_bumpers/: CMakeLists.txt  controller.cpp  controller.h  krembot.ino.cpp  krembot_main.h
argos3-user/controllers/sand_timer_test/: CMakeLists.txt  krembot.ino.cpp
argos3-user/controllers/simple_demo/: CMakeLists.txt  controller.h  krembot.ino.cpp  krembot_main.h
argos3-user/loop_functions/: CMakeLists.txt
argos3/doc/api/standalone/: a00001.html  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00021.js  a00022.html  (+5095 more)
argos3/src/: CMakeLists.txt
argos3/src/cmake/: ARGoSBuildChecks.cmake
argos3/src/core/: CMakeLists.txt
argos3/src/core/simulator/: simulator.cpp  simulator.h
argos3/src/core/utility/plugins/: dynamic_loading.cpp
argos3/src/plugins/robots/: CMakeLists.txt
argos3/src/plugins/robots/eye-bot/simulator/: eyebot_proximity_default_sensor.cpp
argos3/src/plugins/robots/foot-bot/: CMakeLists.txt
argos3/src/plugins/robots/foot-bot/control_interface/: ci_footbot_imu_sensor.cpp  ci_footbot_imu_sensor.h  ci_footbot_light_sensor.cpp  ci_footbot_light_sensor.h  ci_footbot_proximity_sensor.cpp  ci_footbot_proximity_sensor.h
argos3/src/plugins/robots/foot-bot/simulator/: footbot_entity.cpp  footbot_entity.h  footbot_imu_sensor.cpp  footbot_imu_sensor.h  footbot_light_rotzonly_sensor.cpp  footbot_light_rotzonly_sensor.h  footbot_proximity_default_sensor.cpp  qtopengl_footbot.cpp
argos3/src/plugins/robots/generic/control_interface/: ci_leds_actuator.h  ci_proximity_sensor.cpp  (+1 more)
argos3/src/plugins/robots/krembot/: CMakeLists.txt
argos3/src/plugins/robots/krembot/control_interface/: ci_krembot_base_ground_sensor.cpp  ci_krembot_distance_scanner_actuator.cpp  ci_krembot_distance_scanner_sensor.cpp  ci_krembot_encoder_sensor.cpp  ci_krembot_light_sensor.cpp  ci_krembot_motor_ground_sensor.cpp  ci_krembot_proximity_sensor.cpp  ci_krembot_proximity_sensor.h  ci_krembot_turret_actuator.cpp  ci_krembot_turret_encoder_sensor.cpp
argos3/src/plugins/robots/krembot/simulator/: dynamics2d_krembot_model.cpp  krembot_base_ground_rotzonly_sensor.cpp  krembot_distance_scanner_default_actuator.cpp  krembot_distance_scanner_equipped_entity.cpp  krembot_distance_scanner_rotzonly_sensor.cpp  krembot_entity.cpp  krembot_light_rotzonly_sensor.cpp  krembot_motor_ground_rotzonly_sensor.cpp  krembot_proximity_default_sensor.cpp  krembot_proximity_default_sensor.h  krembot_turret_default_actuator.cpp  krembot_turret_encoder_default_sensor.cpp  krembot_turret_entity.cpp  physx_krembot_model.cpp  pointmass3d_krembot_model.cpp  qtopengl_krembot.cpp
argos3/src/plugins/simulator/entities/: CMakeLists.txt  imu_equipped_entity.cpp  imu_equipped_entity.h  led_entity.cpp  led_entity.h  led_equipped_entity.cpp  led_equipped_entity.h  light_entity.cpp  light_entity.h  light_sensor_equipped_entity.cpp
docs/: CONTRIBUTE.md  install_workspace.md  multi_controllers.md  new_program.md  porting.md  wheels_calib.md
krembot/: CMakeLists.txt  LICENSE
krembot/scripts/: install.sh  krembot.pc  krembot.pc.in  setup_env.sh  uninstall.sh
krembot/src/: SandTimer.cpp  SandTimer.h  SerialSim.cpp  SerialSim.h  application.h  cbumpers.cpp  cbumpers.h  imu_sensor.h  krembot.cpp  krembot.h  mobile_base.cpp  rgb_led.cpp  rgba_sensor.h  utils.cpp
krembot/src/controller/: controller.cpp  controller.h  krembot_controller.cpp  krembot_controller.h
krembot/src/krembot/: battery.cpp  battery.h  bumper_state.cpp  bumper_state.h  cbumpers.cpp  cbumpers.h  cbumpers_result.cpp  cbumpers_result.h  imu_sensor.cpp  imu_sensor.h  krembot.cpp  krembot.h  mobile_base.cpp  mobile_base.h  rgb_led.cpp  rgb_led.h  rgba_sensor.cpp  rgba_sensor.h  utils.cpp  utils.h
krembot/src/particle_app/: application.h  particle_observer.cpp  particle_observer.h  particle_string.cpp  particle_string.h  serial.cpp  serial.h  timing.cpp  timing.h
krembot/src/sand_timer/: SandTimer.cpp  SandTimer.h
krembot_ws/: README.md  new_program.md
krembot_ws/config/: mixed_controllers.argos  porting_example.argos  program_template.argos  run_away_by_bumpers.argos  run_away_by_bumpers_multiple.argos  sand_timer_test.argos  simple_demo.argos
krembot_ws/controllers/porting_example/: krembot.ino.cpp
krembot_ws/controllers/porting_example/my_code/: MyCode.h
krembot_ws/controllers/program_template/: CMakeLists.txt
krembot_ws/controllers/run_away_by_bumpers/: CMakeLists.txt
krembot_ws/scripts/: compile.sh
(+6 files in other folders)
